--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,13 @@
-# posts/show.html.erb
-
 <h1><%= @post.title %></h1>
 
-<% if can? :edit, @post %>
-  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-mini' %>
-<% end %>
+<div class="row">
+  <div class="span8">
+    <p><%= @post.body %></p>
+  </div>
+  <div class="span4">
+    <% if can? :edit, @post %>
+      <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-large btn-block' %>
+    <% end %>
+  </div>
 
-<p><%= @post.body %></p>
+</div>
