--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,7 +10,7 @@
     <% @posts.each do |post| %>
         <div class="media-body">
           <h4 class="media-heading">
-            <%= link_to post.title, [@topic, post] %>
+            <%= link_to (markdown post.title), [@topic, post] %>
           </h4>
           <small>
             submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
