--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,11 +2,16 @@
 
 <div class="row">
   <div class="span8">
+    <small>
+      <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+      submitted <%= time_ago_in_words(@post.created_at) %> ago by 
+      <%= @post.user.name %>
+    </small>  
     <p><%= markdown @post.body %></p>
   </div>
   <div class="span4">
     <% if can? :edit, @post %>
-      <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-large btn-block' %>
+      
     <% end %>
   </div>
 
