Completed the challenge by adding images to posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,12 @@
       submitted <%= time_ago_in_words(@post.created_at) %> ago by 
       <%= @post.user.name %>
     </small>  
-    <p><%= markdown @post.body %></p>
+    <p>
+      <div style="float:left;">
+        <%= image_tag(@post.post_image.large.url) if @post.post_image? %>
+      </div>
+      <%= markdown @post.body %>
+    </p>
   </div>
   <div class="span4">
     <% if can? :edit, @post %>
