--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,13 @@
     </div>
   </div>
   <div class="control-group">
+    <%= image_tag(post.post_image.small.url) if post.post_image? %>
+    <%= f.label :post_image, class: 'control-label' %>
+    <div class="controls"> 
+      <%= f.file_field :post_image %>
+    </div>
+  </div>
+  <div class="control-group">
     <div class="controls">
       <%= f.submit "Save", class: 'btn' %>
     </div>
