--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -15,6 +15,7 @@
       </div>
     <% end %>
   </div>
+  <%= will_paginate @posts %>
   <div class="span4">
     <% if can? :create, Topic %>
       <%= link_to "New Topic", new_topic_path, class: 'btn btn-large btn-block' %>
