--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -21,6 +21,7 @@
         </div>
     <% end %>
   </div>
+  <%= will_paginate @posts %>
   <div class="span4">
     <% if can? :create, Post %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-large btn-block' %>
