--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= markdown @post.title %></h1>
 
+<% if can? :update, @post %>
+  <%= link_to "Edit Post", edit_post_path, class: 'btn btn-primary btn-mini' %>
+<% end %>
+
 <div class="row">
   <div class="span8">
     <small>
@@ -14,14 +18,12 @@
       <%= markdown @post.body %>
     </p>
   </div>
-  <div class="span4">
-    <% if can? :edit, @post %>
-      
-    <% end %>
+  <div class="span8">
+    <%= render @post.comments %>
   </div>
   <div class="span4">
     <% if can? :create, Comment %>
-      <%= link_to "New Comment", post_comments_path(@post), class: 'btn btn-large btn-block' %>
+      <%= render 'comments/form', :comment => current_user.comments.build %>
     <% end %>
   </div>
 </div>
