--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for :comment, :url => post_comments_path, html: { class: 'form-horizontal' } do |f| %>
-  <% if comment.errors.any? %>
+<%= form_for [@topic, @post, @comment] do |f| %>
+  <% if @comment.errors.any? %>
     <div class="alert alert-block">
       <h4>There are <%= pluralize(comment.errors.count, "error") %></h4>
       <ul>
@@ -10,7 +10,7 @@
     </div>
   <% end %>
   <div class="control-group">
-    <%= f.label :body, class: 'control-label' %>
+    <%= f.label "Comment: ", class: 'control-label' %>
     <div class="controls">
       <%= f.text_area :body, rows: 8 %>
     </div>
