--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -27,5 +27,10 @@
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-large btn-block' %>
     <% end %>
   </div>
+  <div class="span4">
+    <% if can? :destroy, @topic %>
+      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-large btn-block btn-danger', confirm: 'Are you sure you want to delete this topic?' %> 
+    <% end %>
+  </div>
 </div>
 
