--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,14 +2,23 @@
 
 <div class="row">
   <div class="span1">
+    <%= render partial: 'votes/voter', locals: {topic: @topic, post: @post} %>
     <% if can? :update, @post %>
       <%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-primary btn-mini' %>
     <% end %>
   </div>
-  <div class="span1">
+  <div class="span2">
     <% if can? :destroy, @post %>
       <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-mini btn-block btn-danger', confirm: 'Are you sure you want to delete this post?' %>
     <% end %>
+
+    <div>
+      <h3><%= pluralize(@post.points, 'point') %></h3>
+      <small>
+        <%= pluralize(@post.up_votes, 'up vote') %>
+        <%= pluralize(@post.down_votes, 'down vote') %>
+      </small>
+    </div>
   </div>
 </div>
 
