--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,7 @@
     <p class="lead"><%= @topic.description %></p>
     <% @posts.each do |post| %>
         <div class="media-body">
+          <%= render partial: 'votes/voter', locals: {topic: @topic, post: post} %>
           <h4 class="media-heading">
             <%= link_to (markdown post.title), [@topic, post] %>
           </h4>
