--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,15 @@
-<div class="media">
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
+  <%= link_to '#', class: 'pull-left' do %>
+    <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
+  <% end %>
   <div class="media-body">
-    <blockquote>
-      <p>
-        <%= comment.body %>
-      </p>  
-       <small>Comment submitted by <%= User.find(comment.user_id).name %></small>
-       <% if can? :destroy, comment %>
-        <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
-       <% end %>
-    </blockquote>
+    <blockquote><%= comment.body %></blockquote>
+    <small>
+      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+      <% if can? :destroy, comment %>
+        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+      <% end %>
+    </small>
+    
   </div>
-</div>
+<% end %>
