--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,20 +7,8 @@
 <div class="row">
   <div class="span8">
     <p class="lead"><%= @topic.description %></p>
-    <% @posts.each do |post| %>
-        <div class="media-body">
-          <%= render partial: 'votes/voter', locals: {topic: @topic, post: post} %>
-          <h4 class="media-heading">
-            <%= link_to (markdown post.title), [@topic, post] %>
-          </h4>
-          <small>
-            <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by 
-            <%= post.user.name %><br/>
-            <%= post.comments.count %> Comments
-          </small>
-        </div>
-    <% end %>
+    <%= render @posts %>
+    <%= will_paginate @posts %>
   </div>
   <%= will_paginate @posts %>
   <div class="span4">
