--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
+@import "bootstrap-custom";
 @import "bootstrap";
 
 .user-info {
@@ -6,4 +7,17 @@
 
 .nav {
   margin-top: 5px;
+}
+
+.vote-arrows {
+  width: 40px;
+  text-align: center;
+}
+
+.voted {
+  opacity: 0.5;
+}
+
+.hide {
+  display: none;
 }
