--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Bloccit</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -11,12 +11,21 @@
   <div class="container">
     <ul class="nav nav-tabs">
         <li><%= link_to "Bloccit", root_path %></li>
+        <li><%= link_to "Topics", topics_path %></li>
+        <li><%= link_to "Popular", posts_path %></li>
+        <li><%= link_to "Users", users_path %></li>
         <li><%= link_to "About", about_path %></li>
 
         <div class="pull-right user-info">
            <% if current_user %>
             <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
-             Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+             Hello <%= link_to (current_user.name || current_user.email), current_user %>!
+             <%= link_to edit_user_registration_path, class: 'btn btn-mini' do %>
+              <i class="icon-user"> </i>
+            <% end %>
+            <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-mini' do %>
+              <i class="icon-share-alt"> </i>
+            <% end %>
            <% else %>
              <%= link_to "Sign In", new_user_session_path %> or 
              <%= link_to "Sign Up", new_user_registration_path %>
@@ -45,5 +54,6 @@
     <%= yield %>
   </div>
 
+  <%= javascript_include_tag "application" %>
 </body>
 </html>
