--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,14 +2,24 @@
 
 <div class="row">
   <div class="span1">
+    <%= render partial: 'votes/voter', locals: {topic: @topic, post: @post} %>
     <% if can? :update, @post %>
       <%= link_to "Edit Post", edit_topic_post_path(@topic, @post), class: 'btn btn-primary btn-mini' %>
     <% end %>
   </div>
-  <div class="span1">
+  <div class="span2">
     <% if can? :destroy, @post %>
       <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-mini btn-block btn-danger', confirm: 'Are you sure you want to delete this post?' %>
     <% end %>
+
+    <div>
+      <h3><%= pluralize(@post.points, 'point') %></h3>
+      <small>
+        <%= pluralize(@post.up_votes, 'up vote') %>
+        <%= pluralize(@post.down_votes, 'down vote') %>
+      </small>
+    </div>
+    <%= render partial: 'favorites/favorite', locals: {topic: @topic, post: @post} %>
   </div>
 </div>
 
@@ -39,7 +49,14 @@
   <div class="row">
       <div class="span12">
          <% if can? :create, Comment %>
-          <%= render partial: 'comments/form'  %>
+		 <hr/>
+
+		  <a href="#" class="js-add-comment">Add Comment</a>
+		  <br/>
+		  <div class="js-new-comment hide">
+			<h4>New Comment</h4>
+			<%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comment } %>
+		  </div>
         <% end %>
       </div>
   </div>
