--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Topics</h1>
 
-<div class="row">
+<div class="row blocmetrics">
   <div class="span8">
     <% @topics.each do |topic| %>
       <div class="media">
