--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
 
   <%= csrf_meta_tags %>
+  
+  <%= javascript_include_tag "jquery-1.11.0.min" %>
+  <%= javascript_include_tag "blocmetrics" %>
 </head>
 <body>
 
