--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
 
   <%= csrf_meta_tags %>
   
-  <%= javascript_include_tag "jquery-1.11.0.min" %>
-  <%= javascript_include_tag "blocmetrics" %>
+  <script type="text/javascript" src="assets/blocmetrics.js"></script>
+  <script type="text/javascript" src="assets/jquery-1.11.0.min.js"></script>
 </head>
 <body>
 
